--- a/index.html
+++ b/index.html
@@ -17,16 +17,44 @@
 canvas {
   display: block;
 }
+button{
+  font-family: 'Pirata One', sans-serif;
+}
 </style>
-
+<script src="https://cdn.jsdelivr.net/npm/@tweenjs/tween.js@18.6.4/dist/tween.umd.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
   <script type ="module" src="./script.js"></script>
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>pirates</title>
 </head>
-
-
+<body>
+  <div id="startPage" style="
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background-color: rgba(0,0,0,0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  flex-direction: column;
+  font-family: 'Pirata One', sans-serif;
+  color: white;
+  font-size: 2em;">
+  <h1>Pirate Game</h1>
+  <button id="startButton" style="font-size: 1.5em; padding: 10px 20px; cursor: pointer;">Start Game</button>
+</div>
+</body>
+<div id="cannonProgressContainer" style="
+    position: fixed; top: 10px; left: 50%; transform: translateX(-50%);
+    width: 200px; height: 20px; background: rgba(0,0,0,0.2); display: none; border-radius: 10px; overflow: hidden;
+">
+    <div id="cannonProgressBar" style="
+        height: 100%; width: 0%; background: black; transition: width 0.1s;
+    "></div>
+</div>
 <canvas id="canvas"></canvas>
 
 
