--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 </style>
 <script src="https://cdn.jsdelivr.net/npm/@tweenjs/tween.js@18.6.4/dist/tween.umd.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
+
+<script type="module" src="./floater.js"></script>
+<script type="module" src="./gerstnerWater.js"></script>
+<script type="module" src= "../three/build/three.module.js"></script>
+<script type="module" src="../three/examples/jsm/loaders/GLTFLoader.js"></script>
+<script type="module" src="/lil-gui.module.min.js"></script>
+<script type="module" src="../three/examples/jsm/controls/OrbitControls.js"></script>
+<script type="module" src="../three/examples/jsm/objects/Sky.js"></script>
+
 <script type="module" src="./script.js"></script>
 <head>
   <meta charset="UTF-8" />
