--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
           </p>
 
           <div id="glb-model-container"></div>
+          <h2 class="text-5xl mb-2">Goal/Inspiration</h2>
+          <p class="text-xl">
+            My goal was to create an engaging game, simple enough to be played on thhe browser<br />I was inspired by the game "Sea of Thieves" and wanted to create a similar experience<br />The game is designed to be played with a microbit controller, but can also be played with keyboard controls.
+          </p>
         </div>
       </section>
 
@@ -285,7 +289,7 @@ controls.enabled = false;
         (gltf) => {
           model = gltf.scene;
           model.scale.set(0.025, 0.025, 0.025);
-          model.position.set(0, -1, 0);
+          model.position.set(0, -0.5, 0);
           scene.add(model);
         },
         (xhr) => {
