--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <div class="anim-text max-w-2xl mx-auto mb-4">
           <h2 class="text-5xl mb-2">Potential Improvements & Alternative Ideas</h2>
           <p class="text-xl">
-            1. More challenges for the player(enemies fire back, time limit, etc.)<br>
+            1. More challenges for the player(enemies fire back, time limit, etc.)<br><br>
             2. Model seabed underneath the water, so that the bottom isn't empty void(player can see this if they go off edge)<br><br>
             3. Have a playable pirate character that moves around the boat(instead of only being able to control boat). Would make more immersive<br><br>
             4. Program computer webcam to detect facial expressions to control boat(more accesible for disabled)<br><br>
