--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             In turn, my program interprets the data and adjusts the virtual boat accordingly<br><br><br>Portion of my program which reads serial import of microbit to measure angles and if the button is pressed:</p>
         </div>
         <div class="anim-image"> 
-        <image src="image1.png" style="height:50%;width:50%;transform: translateX(275px);border: 2px solid rgb(87, 3, 87);box-shadow: 0 0 20px rgb(109, 2, 109);border-radius: 8px;"></image>
+        <image src="image1.png" style="height:50%;width:50%;transform: translateX(285px);border: 2px solid rgb(87, 3, 87);box-shadow: 0 0 20px rgb(109, 2, 109);border-radius: 8px;"></image>
         </div>
       </section>
 
@@ -286,7 +286,7 @@
             3. Have a playable pirate character that moves around the boat(instead of only being able to control boat). Would make more immersive<br><br>
             4. Program computer webcam to detect facial expressions to control boat(more accesible for disabled)<br><br>
             5. Add more elements to the environment(islands, sharks, varying weather, changing time)<br><br>
-            6. Figure out steps to publish website ang get a domain name
+            6. Figure out steps to publish website and get a domain name
           </p>
         </div>
       </section>
