got rid of faulty importmaps

--- a/index2.html
+++ b/index2.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<script type="importmap">
-  {
-    "imports": {
-      "three": "../build/three.module.js",
-      "three/addons/": "./jsm/"
-    }
-  }
-</script>
+
 <style>
   body {
   margin: 0px;
@@ -19,7 +12,7 @@ canvas {
 }
 </style>
 
-  <script type ="module" src="./script2.js"></script>
+  <script type ="module" src="/script2.js"></script>
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
